<resources>
    <string name="app_name">Trek Descubre</string>
    <string name="inicio_sesion">Iniciar sesión</string>
    <string name="sin_cuenta">¿No tienes cuenta?</string>
    <string name="registrate">Regístrate</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="olvido_su_contraseña">¿Olvidó su contraseña?</string>
    <string name="iniciar">Iniciar</string>
    <string name="email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="registro">Registrar</string>
    <string name="registros">Registro</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="repetir_contraseña">Repetir contraseña</string>
    <string name="nombre_completo">Nombre completo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="Name">Nombre y apellidos</string>
    <string name="edad">Edad</string>
    <string name="genero">Genero</string>
    <string name="name_caminata_subir">Nombre</string>
    <string name="ubicacion_ruta_subida">Ubicación</string>
    <string name="distancia">Distancia en Km</string>
    <string name="seguridad_subida">Seguridad (1 a 5)</string>
    <string name="descripcion_subida">Descripción</string>
    <string name="guardar">Guardar</string>
    <string name="field">*Campo obligatorio</string>
    <string name="nombre_ruta">Nombre de la ruta</string>
    <string name="descripcion_ruta">Descipción de la ruta</string>
    <string name="URL_picture">URL foto</string>
</resources>